--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "public"
-  command = "rm -r .cache && gatsby build"
+  command = "gatsby build"
 [build.environment]
   NODE_VERSION = "12.16.1"
   
